/**
 * @package: Xeptrix
 * @module: LatexDocumentBuilder class
 * @file: src/classes/components/LatexDocumentBuilder.class.ts
 */

import DocumentBuilder from '../interfaces/DocumentBuilder.interface';

class LaTeXDocumentBuilder implements DocumentBuilder {
  buildHeader(): string {
    // Build and return the LaTeX header string representation

    return '';
  }

  buildDocument(): string {
    // Build the document content and return the string representation

    return '';
  }
}

export default LaTeXDocumentBuilder;